Armadillo pics now opens in new tab

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </main>
 
      <footer>
-        <p><a href="https://armadillo-online.org/pictures.html"><strong>Click here for armadillo pics!</strong></a></p>
+        <p><a href="https://armadillo-online.org/pictures.html" title="armadillo-pics" target="_blank"><strong>Click here for armadillo pics!</strong></a></p>
     </footer>
 
 </html>
