--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link rel="stylesheet" href="styles.css" />
         <meta charset="utf-8" />
         <title>Armadillos</title>
     </head>
     
     <body>
         <header>
-            <h1>Armadillos</h1>
+            <h1><span class ="highlight">Armadillos</span></h1>
         </header>
 
         <main>
